<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bwisni.taptracker.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main"
    android:focusable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/mainLayout">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/gridLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/bannerTextView"
            android:gravity="center_horizontal"
            android:textSize="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/primary_text"
            android:layout_column="1"
            android:layout_row="0">

        </TextView>

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/graphs_layout_height"
        android:layout_below="@+id/gridLayout"
        android:layout_above="@+id/adView">

        <pl.droidsonroids.gif.GifTextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/fireView"
            android:background="@drawable/mainactivity_background2"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        ads:fabSize="normal"
        ads:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/fab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:tint="@android:color/white" />

    <android.support.percent.PercentRelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="@dimen/graphs_layout_height"
            android:layout_below="@+id/gridLayout"
            android:id="@+id/percentRelativeLayout">

        <RelativeLayout
                android:layout_height="match_parent"
                android:id="@+id/relativeLayout"
                android:layout_alignBottom="@+id/graph"
                app:layout_widthPercent="15%"
                android:layout_width="wrap_content">

                <lecho.lib.hellocharts.view.ColumnChartView
                    android:layout_width="109.5dip"
                    android:layout_height="150dip"
                    android:id="@+id/kegGraph"
                    android:layout_centerInParent="true" />

                <ImageView
                    android:layout_width="109.5dip"
                    android:layout_height="150dip"
                    android:id="@+id/imageView"
                    android:src="@drawable/keg_outline"
                    android:visibility="visible"
                    android:layout_alignEnd="@+id/kegGraph"
                    android:layout_alignStart="@+id/kegGraph"
                    android:layout_centerInParent="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/kegTextView"
                    android:layout_alignParentStart="false"
                    android:layout_alignStart="@+id/imageView"
                    android:layout_alignEnd="@+id/kegGraph"
                    android:layout_alignTop="@+id/kegGraph"
                    android:layout_alignBottom="@+id/kegGraph"
                    android:textSize="@dimen/abc_text_size_display_3_material"
                    android:textAlignment="center" />

            </RelativeLayout>

            <lecho.lib.hellocharts.view.ComboLineColumnChartView
                android:layout_height="match_parent"
                android:id="@+id/graph"
                android:layout_toStartOf="@+id/pieChart"
                app:layout_widthPercent="60%"
                android:layout_width="wrap_content" />

            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/pieChart"
                app:layout_widthPercent="25%"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/graph"
                android:layout_width="wrap_content" />

        </android.support.percent.PercentRelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/AdminLayout"
        android:layout_alignParentTop="true"
        android:visibility="invisible">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/drinkersListView"
            android:alpha="100"
            android:visibility="visible"
            android:layout_gravity="center_horizontal" />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
