...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:id="@+id/editNameTextView"
                android:layout_alignParentStart="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_alignBaseline="@+id/editTextName" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextName"
                android:inputType="textCapWords"
...
